# sdl3-chess

./: .gitignore  CMakeLists.txt
ChessAssets/: credits.txt
include/: board.h
src/: app.c  main.c
